--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -33,15 +33,15 @@ spec:
         - "1"
       containers:
       - name: podinfod
-        image: stefanprodan/podinfo:1.3.2
+        image: aalpgiray/hooks
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 9898
+        - containerPort: 1234
           name: http
           protocol: TCP
         command:
         - ./podinfo
-        - --port=9898
+        - --port=1234
         - --level=info
         - --random-delay=false
         - --random-error=false
@@ -51,11 +51,11 @@ spec:
         livenessProbe:
           httpGet:
             path: /healthz
-            port: 9898
+            port: 1234
         readinessProbe:
           httpGet:
             path: /readyz
-            port: 9898
+            port: 1234
         resources:
           limits:
             cpu: 1000m
